<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:id="@+id/layout_third"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/password_edtv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:gravity="left|center"
            android:maxLength="20"
            android:layout_marginLeft="0dp"
            style="@style/edit_text"
            android:hint="@string/hint_input_password"
            android:digits="@string/register_edit_digits"/>

        <EditText
            android:id="@+id/repassword_edtv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_edtv"
            android:layout_alignParentRight="true"
            android:maxLength="20"
            android:inputType="textPassword"
            android:digits="@string/register_edit_digits"
            style="@style/edit_text"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_input_repassword"
            android:layout_alignBottom="@+id/txt_confirm_pwd"
             />

        <TextView
            android:layout_width="match_parent"
            style="@style/textStyle.Medium.User"
            android:text="@string/register_error_info"
            android:id="@+id/txt_error_info"
            android:layout_below="@+id/repassword_edtv"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="left|center"
            android:textColor="@color/color_font_gray" />

        <Button
            android:id="@+id/ok_btn"
            android:layout_width="match_parent"
            style="@style/button_style"
            android:text="@string/register_btn_register"
            android:layout_below="@+id/txt_error_info"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>
</RelativeLayout>
