<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <EditText
            android:id="@+id/phone_num_edtv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/hint_input_phone"
            android:text=""
            style="@style/edit_text"/>

        <LinearLayout
            android:id="@+id/check_code_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_num_edtv"
            android:weightSum="6"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/check_code_edtv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:ems="6"
                android:layout_alignParentLeft="true"
                android:inputType="number"
                android:hint="@string/hint_input_check_code"
                style="@style/edit_text"/>

            <Button
                android:id="@+id/send_code_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_weight="2"
                android:layout_alignBottom="@+id/check_code_edtv"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="@dimen/margin_space_half"
                android:enabled="true"/>

        </LinearLayout>


        <EditText
            android:id="@+id/password_edtv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:gravity="left|center"
            android:maxLength="20"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            style="@style/edit_text"
            android:hint="@string/hint_input_password"
            android:digits="@string/register_edit_digits"/>

        <EditText
            android:id="@+id/repassword_edtv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_edtv"
            android:layout_alignParentRight="true"
            android:maxLength="20"
            android:inputType="textPassword"
            android:digits="@string/register_edit_digits"
            style="@style/edit_text"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_input_repassword"
            android:layout_alignBottom="@+id/txt_confirm_pwd"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/textStyle.Normal.lightRed"
            android:text="@string/register_error_info"
            android:id="@+id/txt_error_info"
            android:layout_below="@+id/repassword_edtv"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/margin_space_half"
            android:gravity="left|center"/>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            style="@style/button_style"
            android:text="@string/register_btn_next"
            android:layout_below="@+id/check_code_layout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</RelativeLayout>
